--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -36300,4 +36300,46 @@ label span {
     color: #5b6670;
 }
 
+.custom-modal-content-area {
+    position: fixed;
+    top: 66px;
+    /* Sesuaikan dengan header */
+    left: 260px;
+    /* Sesuaikan dengan sidebar */
+    width: calc(100% - 260px);
+    /* Lebar konten tanpa sidebar */
+    height: calc(100% - 66px);
+    /* Tinggi konten tanpa header */
+    background: white;
+    z-index: 9999;
+    display: none;
+    /* Awalnya sembunyi */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.popup-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: transparent;
+    border: none;
+    font-size: 24px;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 10000;
+    /* pastikan berada di atas iframe */
+}
+
+#iframePage {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
 /*# sourceMappingURL=style.css.map */
